tests/errors/generic-enum-constructor-arity.ari
enum Option[T] {
  None,
  Some(T),
}

fn main() -> i64 {
  let value = Some<i64, bool>(1);
  return 0;
}
